handles the bye
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5037 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/jruby-sips-demo/README
+++ b/sip-servlets-examples/jruby-sips-demo/README
@@ -7,7 +7,7 @@ mvn clean install
 
 Run the application
 
-1. deploy to Mobicents Sip Servlets :
+1. deploy to Mobicents Sip Servlets at least build 293 on http://hudson.jboss.org/hudson/view/Mobicents/job/MobicentsSipServletsRelease/ :
 cp target/jruby-demo-sip-servlet-1.0-SNAPSHOT.war $JBOSS_HOME/server/default/deploy
 2. copy the jruby-sip-demo.properties dar file into $JBOSS_HOME/server/default/conf/mobicents-dar.properties
 3. Start jboss with sh $JBOSS_HOME/bin/run.sh
