--- a/sip-servlets-examples/pure-jruby-telco/README
+++ b/sip-servlets-examples/pure-jruby-telco/README
@@ -6,9 +6,37 @@ Pure JRuby on Rails Sip Servlets application that can <make and receive phone ca
 	a confirmation call is made to your phone saying that is has been taken into account and has been routed to a sales representative.\
 	Moreover you can call directly the application and the pure jruby application will be able to handle the SIP signalling and setup and teardown the call. 
 	 
-Deploy the application :
+Build the application :
 
-modify the ruby-teclo-app-rails.yml located in this directory to map the RAILS_ROOT variable to where this application is located on your filesystem
+1. modify the ruby-teclo-app-rails.yml located in this directory to map the RAILS_ROOT variable to where this application is located on your filesystem
+
+Now let's freeze the rails version and the associated gems dependencies we are using into our application so that if rails or a dependency is upgraded in the system, our application will always use the version we freezed and not the newly upgraded version of rails from the system. Note: this is highly recommended for production env and really is a best practice (google freeze rails for more information)
+Note that freezing is mandatory if you wish to deploy your application to JBoss 5 with the jboss-rails plugin.
+
+It is a 2 steps process, first freeze rails then the dependencies (in our case the jdbcmysql adapter)
+Here is the command to freeze your rails application :
+
+ jruby -S rake rails:freeze:gems
+
+Here is the command
+
+jruby -S rake gems:unpack:dependencies
+
+You can verify that it worked by issuing this command
+
+ jruby -S rake gems
+
+That will produce the following output :
+
+ - [F] activerecord-jdbcmysql-adapter = 0.9
+   - [F] activerecord-jdbc-adapter = 0.9
+   - [F] jdbc-mysql = 5.0.4
+
+I = Installed
+F = Frozen
+R = Framework (loaded before rails starts)
+
+Let's add jboss-rails-support to the application so that it can be deployed and run on JBoss 5 and even start JBoss 5 from the commandline, grab the following zip http://repo.oddthesis.org/maven2/SNAPSHOTS/org/jboss/rails/jboss-rails/1.0.0.Beta7-SNAPSHOT/jboss-rails-1.0.0.Beta7-20090408.124930-1-support.zip and extract it to the vendor/plugins directory of our application.
 
 Run the application
 
